--- a/quiz-examination-system/SystemLogsPage.xaml
+++ b/quiz-examination-system/SystemLogsPage.xaml
@@ -7,7 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource LayerFillColorDefaultBrush}">
+    Background="Transparent">
 
     <Grid Padding="24" RowSpacing="16">
         <Grid.RowDefinitions>
